tests/contract_testcases/polkadot/errors/custom_error_02.sol
error Unauthorized(bytes b);

contract VendingMachine {
    function withdraw() public pure {
        revert Unauthorized("foo");
    }
}

// ---- Expect: diagnostics ----
